Разработан хедер и футер, созданы начальные контейнеры

--- a/index.html
+++ b/index.html
@@ -8,7 +8,49 @@
   <link rel="stylesheet" href="/pages/index.css">
   <title>Путешествия по России</title>
 </head>
-<body>
-  
+<body class="page">
+  <div class="page__container">
+
+    <header class="header page__header">
+      <img class="header__logo" src="/images/header-logo.svg" alt="логотип с континентом и надписью Россия.">
+      <ul class="header__lingue">
+        <li class="header__lang-item"><a class="header__lang-link" href="#">Ru</a></li>
+        <li class="header__lang-item"><a class="header__lang-link" href="#">En</a></li>
+      </ul>
+    </header>
+
+    <main class="content">
+
+    </main>
+
+
+    <footer class="footer page__footer">
+      <nav class="footer__column">
+        <ul class="footer__links">
+          <li class="footer__link-item" >
+            <a class="footer__link" href="#">Карты</a>
+          </li>
+          <li class="footer__link-item" >
+            <a class="footer__link" href="#">Погода</a>
+          </li>
+          <li class="footer__link-item" >
+            <a class="footer__link" href="#">Расписание</a>
+          </li>
+          <li class="footer__link-item" >
+            <a class="footer__link" href="#">Копирайт</a>
+          </li>
+          <li class="footer__link-item" >
+            <a class="footer__link" href="#">Путешествия</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__column">
+        <p class="footer__copyright">&copy; 2022. Никитин Даниил</p>
+      </div>
+    </footer>
+
+     
+  </div>
+
 </body>
 </html>
