Размечена структура контента страницы, создана иерархия файлов по БЭМ

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     </header>
 
     <main class="content">
-
+      <section class="lead content__lead"></section>
+      <section class="intro content__intro"></section>
+      <section class="photo-grid content__photo-grid"></section>
+      <section class="places content__places"></section>
+      <section class="cover content__cover"></section>
     </main>
 
 
