Добавлен блок фото-грид (десктоп)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
     <main class="content">
       <section class="lead content__lead"></section>
       <section class="intro content__intro"></section>
-      <section class="photo-grid content__photo-grid"></section>
+      <section class="photo-grid content__photo-grid">
+        <img class="photo-grid__item" src="/images/photo-grid-train.jpg" alt="Окно в поезде с видом на побережье.">
+        <img class="photo-grid__item" src="/images/photo-grid-atharva-tulsi.jpg" alt="Вид над облаками на горы Уллу-Тау.">
+        <img class="photo-grid__item" src="/images/photo-grid-tuman.jpg" alt="Туманный рассвет на поле со стогами сена, на одном из которых стоит пес.">
+        <img class="photo-grid__item" src="/images/photo-grid-sochi.jpg" alt="Вид сверху на туманный сочинский зимний хвойный лес.">
+        <img class="photo-grid__item" src="/images/photo-grid-arisa.jpg" alt="Ракурс колеса автомобиля, стоящего на кристально чистом льду.">
+        <img class="photo-grid__item" src="/images/photo-grid-baikal.jpg" alt="Летнее побережье озера Байкал.">
+        <img class="photo-grid__item" src="/images/photo-grid-elbrus.jpg" alt="Вид со стороны на гору Эльбрус.">
+        <img class="photo-grid__item" src="/images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходного перехода, на фоне наваленых бетонных тумб.">
+        <img class="photo-grid__item" src="/images/photo-grid-kamchatka-1.jpg" alt="Возле гейзеров Камчатки.">
+        <img class="photo-grid__item" src="/images/photo-grid-kamchatka-2.jpg" alt="Утро неподалеку от вулкана Камчатки.">
+        <img class="photo-grid__item" src="/images/photo-grid-baikal-2.jpg" alt="Скалы возле зимнего озера Байкал.">
+        <img class="photo-grid__item" src="/images/photo-grid-ergaki.jpg" alt="Туманный горный хребет Ергаки.">
+      </section>
       <section class="places content__places"></section>
       <section class="cover content__cover"></section>
     </main>
