Внесены финальные правки, составлен README

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
     <header class="header page__header">
       <img class="header__logo" src="/images/header-logo.svg" alt="логотип с континентом России.">
       <ul class="header__lingue">
-        <li class="header__lang-item"><a class="header__lang-link link-hover" href="#">Ru</a></li>
+        <li class="header__lang-item header__lang-item_enabled"><a class="header__lang-link link-hover" href="#">Ru</a></li>
         <li class="header__lang-item"><a class="header__lang-link link-hover" href="#">En</a></li>
       </ul>
     </header>
