--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header class="header page__header">
       <img class="header__logo" src="/images/header-logo.svg" alt="логотип с континентом России.">
       <ul class="header__lingue">
-        <li class="header__lang-item header__lang-item_enabled"><a class="header__lang-link link-hover" href="#">Ru</a></li>
+        <li class="header__lang-item"><a class="header__lang-link link-hover header__lang-link_enabled" href="#">Ru</a></li>
         <li class="header__lang-item"><a class="header__lang-link link-hover" href="#">En</a></li>
       </ul>
     </header>
 
-    <main class="content">
+    <main class="content content_align_center">
       <section class="lead content__lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -57,25 +57,25 @@
       </section>
 
       <section class="places content__places">
-        <ul class="places__items">
-          <li class="places__item">
+        <article class="places__items">
+          <article class="places__item">
             <h2 class="places__title">Куршская коса</h2>
-            <figure class="places__link-item">
-              <figcaption class="places__caption">URL</figcaption>
+            <div class="places__link-item">
+              <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="http://park-kosa.ru">park-kosa.ru</a>
-            </figure>
+            </div>
             <img src="/images/place-kosa.jpg" alt="Мель, вся в камнях и корягах." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
               <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
             </div>
-          </li>
-          <li class="places__item">
+          </article>
+          <article class="places__item">
             <h2 class="places__title">Кольский</h2>
-            <figure class="places__link-item">
-              <figcaption class="places__caption">URL</figcaption>
+            <div class="places__link-item">
+              <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
-            </figure>
+            </div>
             <img src="/images/place-kolsky.jpg" alt="Снежные Хибины Кольского полуострова." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -83,26 +83,26 @@
               <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                 в Мурманск.</p>
             </div>
-          </li>
-          <li class="places__item">
+          </article>
+          <article class="places__item">
             <h2 class="places__title">Алтай</h2>
-            <figure class="places__link-item">
-              <figcaption class="places__caption">URL</figcaption>
+            <div class="places__link-item">
+              <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
-            </figure>
+            </div>
             <img src="/images/place-altai.jpg" alt="Открытый лэптоп на фоне Алтайского леса." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Алтай — одно из красивейших мест в России. 
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
               <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
             </div>
-          </li>
-          <li class="places__item">
+          </article>
+          <article class="places__item">
             <h2 class="places__title">Зимний Байкал</h2>
-            <figure class="places__link-item">
-              <figcaption class="places__caption">URL</figcaption>
+            <div class="places__link-item">
+              <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="https://vk.com/baikalmile">vk.com/baikalmile</a>
-            </figure>
+            </div>
             <img src="/images/place-winter-baikal.jpg" alt="Трещины на прозрачном льду озера Байкал." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -110,21 +110,21 @@
               <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
                 к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
             </div>
-          </li>
-          <li class="places__item">
+          </article>
+          <article class="places__item">
             <h2 class="places__title">Карелия</h2>
-            <figure class="places__link-item">
-              <figcaption class="places__caption">URL</figcaption>
+            <div class="places__link-item">
+              <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="http://vodlozero.ru/">vodlozero.ru</a>
-            </figure>
+            </div>
             <img src="/images/place-karelia.jpg" alt="Вытянутое озеро в вечернем туманном лесу Карелии." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
-          </li>
-        </ul>
+          </article>
+        </article>
       </section>
 
       <section class="cover content__cover">
@@ -138,26 +138,24 @@
     <footer class="footer page__footer">
       <nav class="footer__column">
         <ul class="footer__links">
-          <li class="footer__link-item" >
+          <li class="footer__link-item">
             <a class="footer__link link-hover" target="_blank" href="https://yandex.ru/maps">Карты</a>
           </li>
-          <li class="footer__link-item" >
+          <li class="footer__link-item">
             <a class="footer__link link-hover" target="_blank" href="https://yandex.ru/pogoda">Погода</a>
           </li>
-          <li class="footer__link-item" >
+          <li class="footer__link-item">
             <a class="footer__link link-hover" target="_blank" href="https://rasp.yandex.ru">Расписание</a>
           </li>
-          <li class="footer__link-item" >
+          <li class="footer__link-item">
             <a class="footer__link link-hover" target="_blank" href="https://calendar.yandex.ru">Календарь</a>
           </li>
-          <li class="footer__link-item" >
+          <li class="footer__link-item">
             <a class="footer__link link-hover" target="_blank" href="https://travel.yandex.ru">Путешествия</a>
           </li>
         </ul>
       </nav>
-      <div class="footer__column">
-        <p class="footer__copyright">&copy; 2022. Никитин Даниил</p>
-      </div>
+      <p class="footer__copyright">&copy; 2022. Никитин Даниил</p>
     </footer>
 
   </div>
