Добавлен nojekyll, подправлены пути из index.html

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/images/favicon.ico">
-  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="icon" href="./images/favicon.ico">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
 <body class="page">
   <div class="page__container">
     
     <header class="header page__header">
-      <img class="header__logo" src="/images/header-logo.svg" alt="логотип с континентом России.">
+      <img class="header__logo" src="./images/header-logo.svg" alt="логотип с континентом России.">
       <ul class="header__lingue">
         <li class="header__lang-item"><a class="header__lang-link link-hover header__lang-link_enabled" href="#">Ru</a></li>
         <li class="header__lang-item"><a class="header__lang-link link-hover" href="#">En</a></li>
@@ -24,7 +24,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__main-picture">
-          <img class="lead__image" src='/images/lead-polka.jpg' alt='Девушка спит под окном в поезде дальнего следования. Линиями изображен маршрут от Пскова до Улан-Удэ.'>
+          <img class="lead__image" src='./images/lead-polka.jpg' alt='Девушка спит под окном в поезде дальнего следования. Линиями изображен маршрут от Пскова до Улан-Удэ.'>
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
@@ -42,18 +42,18 @@
       </section>
 
       <section class="photo-grid content__photo-grid">
-        <img class="photo-grid__item" src="/images/photo-grid-train.jpg" alt="Окно в поезде с видом на побережье.">
-        <img class="photo-grid__item" src="/images/photo-grid-atharva-tulsi.jpg" alt="Вид над облаками на горы Уллу-Тау.">
-        <img class="photo-grid__item" src="/images/photo-grid-tuman.jpg" alt="Туманный рассвет на поле со стогами сена, на одном из которых стоит пес.">
-        <img class="photo-grid__item" src="/images/photo-grid-sochi.jpg" alt="Вид сверху на туманный сочинский зимний хвойный лес.">
-        <img class="photo-grid__item" src="/images/photo-grid-arisa.jpg" alt="Ракурс колеса автомобиля, стоящего на кристально чистом льду.">
-        <img class="photo-grid__item" src="/images/photo-grid-baikal.jpg" alt="Летнее побережье озера Байкал.">
-        <img class="photo-grid__item" src="/images/photo-grid-elbrus.jpg" alt="Вид со стороны на гору Эльбрус.">
-        <img class="photo-grid__item" src="/images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходного перехода, на фоне наваленых бетонных тумб.">
-        <img class="photo-grid__item" src="/images/photo-grid-kamchatka-1.jpg" alt="Возле гейзеров Камчатки.">
-        <img class="photo-grid__item" src="/images/photo-grid-kamchatka-2.jpg" alt="Утро неподалеку от вулкана Камчатки.">
-        <img class="photo-grid__item" src="/images/photo-grid-baikal-2.jpg" alt="Скалы возле зимнего озера Байкал.">
-        <img class="photo-grid__item" src="/images/photo-grid-ergaki.jpg" alt="Туманный горный хребет Ергаки.">
+        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно в поезде с видом на побережье.">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид над облаками на горы Уллу-Тау.">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туманный рассвет на поле со стогами сена, на одном из которых стоит пес.">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Вид сверху на туманный сочинский зимний хвойный лес.">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Ракурс колеса автомобиля, стоящего на кристально чистом льду.">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Летнее побережье озера Байкал.">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Вид со стороны на гору Эльбрус.">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходного перехода, на фоне наваленых бетонных тумб.">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Возле гейзеров Камчатки.">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Утро неподалеку от вулкана Камчатки.">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Скалы возле зимнего озера Байкал.">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Туманный горный хребет Ергаки.">
       </section>
 
       <section class="places content__places">
@@ -64,7 +64,7 @@
               <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="http://park-kosa.ru">park-kosa.ru</a>
             </div>
-            <img src="/images/place-kosa.jpg" alt="Мель, вся в камнях и корягах." class="places__image">
+            <img src="./images/place-kosa.jpg" alt="Мель, вся в камнях и корягах." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
               <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -76,7 +76,7 @@
               <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
             </div>
-            <img src="/images/place-kolsky.jpg" alt="Снежные Хибины Кольского полуострова." class="places__image">
+            <img src="./images/place-kolsky.jpg" alt="Снежные Хибины Кольского полуострова." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                 тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -90,7 +90,7 @@
               <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
             </div>
-            <img src="/images/place-altai.jpg" alt="Открытый лэптоп на фоне Алтайского леса." class="places__image">
+            <img src="./images/place-altai.jpg" alt="Открытый лэптоп на фоне Алтайского леса." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Алтай — одно из красивейших мест в России. 
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -103,7 +103,7 @@
               <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="https://vk.com/baikalmile">vk.com/baikalmile</a>
             </div>
-            <img src="/images/place-winter-baikal.jpg" alt="Трещины на прозрачном льду озера Байкал." class="places__image">
+            <img src="./images/place-winter-baikal.jpg" alt="Трещины на прозрачном льду озера Байкал." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро 
                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -117,7 +117,7 @@
               <span class="places__link-title">url</span>
               <a class="places__link link-hover" target="_blank" href="http://vodlozero.ru/">vodlozero.ru</a>
             </div>
-            <img src="/images/place-karelia.jpg" alt="Вытянутое озеро в вечернем туманном лесу Карелии." class="places__image">
+            <img src="./images/place-karelia.jpg" alt="Вытянутое озеро в вечернем туманном лесу Карелии." class="places__image">
             <div class="places__text-block">
               <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
