Внесены финальные правки блока places

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
 
       <section class="places content__places">
-        <article class="places__items">
+        <div class="places__items">
           <article class="places__item">
             <h2 class="places__title">Куршская коса</h2>
             <div class="places__link-item">
@@ -124,7 +124,7 @@
                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
           </article>
-        </article>
+        </div>
       </section>
 
       <section class="cover content__cover">
