Убран лишний модификатор

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     </header>
 
-    <main class="content content_align_center">
+    <main class="content">
       <section class="lead content__lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
