Добавлен заголовок и подзаголовок секций, размечена секция видео

--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
         </article>
       </section>
 
+      <section class="video content__video">
+        <h2 class="section-title section-title_align-center">В глубины Земли и в дальний космос</h2>
+        <p class="section-subtitle section-subtitle_align-center">Видео от студии Stereotactic о местах в России, где ведутся фундаментальные исследования</p>
+      </section>
+
+
       <section class="cover content__cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
