Реализован блок Video, без адаптива элементов видео-блоков

--- a/index.html
+++ b/index.html
@@ -125,8 +125,36 @@
       </section>
 
       <section class="video content__video">
-        <h2 class="section-title section-title_align-center">В глубины Земли и в дальний космос</h2>
-        <p class="section-subtitle section-subtitle_align-center">Видео от студии Stereotactic о местах в России, где ведутся фундаментальные исследования</p>
+        <h2 class="video__title video__title_align-center">В глубины Земли и&nbsp;в&nbsp;дальний космос</h2>
+        <p class="video__subtitle video__subtitle_align-center">Видео от студии Stereotactic о местах в России, где ведутся фундаментальные исследования</p>
+        <ul class="video__container">
+          <li class="video__item">
+            <a target="_blank" href="https://vimeo.com/81106671" class="video__link video__link_background-kamchatka">
+              <img src="./images/kamchatka.jpg" alt="Пасмурный пейзаж камчатки, вода и горы." class="video__background-img">
+              <div class="video__elements">
+                <img src="./images/icon_play.svg" alt="Иконка воспроизведения (play)." class="video__play-icon">
+                <div class="video__info-block">
+                  <span class="video__duration">6:30</span>
+                  <h2 class="video__item-title">Colors of Kamchatka</h2>
+                  <p class="video__director">Director: Pavel Karykhalin</p>                
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="video__item">
+            <a target="_blank" href="https://vimeo.com/290675450" class="video__link video__link_background-observatory">
+              <img src="./images/observatory.jpg" alt="Обсерватория под сказочно-звездным небом." class="video__background-img">
+              <div class="video__elements">
+                <img src="./images/icon_play.svg" alt="Иконка воспроизведения (play)." class="video__play-icon">
+                <div class="video__info-block">
+                  <span class="video__duration">24:45</span>
+                  <h2 class="video__item-title">Обсерватория | Observatory</h2>
+                  <p class="video__director">Director: Alexander Khudokon </p>                
+                </div>
+              </div>
+            </a>
+          </li>
+        </ul>
       </section>
 
 
