--- a/index.html
+++ b/index.html
@@ -157,6 +157,28 @@
         </ul>
       </section>
 
+      <section class="comments content__comments">
+        <h2 class="comments__title">Фотографы, снимающие Россию</h2>
+        <p class="comments__subtitle">Природа и люди вдохновили их работы, удостоенные наград на международных конкурсах</p>
+        <ul class="comments__container">
+          <li class="comments__item">
+            <img src="./images/lyagushkin.jpg" alt="Виктор Лягушкин в темных очках." class="comments__person-photo">
+            <blockquote class="comments__quote">«Если вам кажется, что в России ничего не происходит, то просто выгляньте “наружу”…»</blockquote>
+            <p class="comments__author">Виктор Лягушкин</p>
+          </li>
+          <li class="comments__item">
+            <img src="./images/hafizov.jpg" alt="Иван Хафизов в красной куртке и шапке-ушанке." class="comments__person-photo">
+            <blockquote class="comments__quote">«Если в город едут туристы — неважно за&nbsp;чем они туда едут: за шамбалой или фрески Рублева искать, или на родину Тарковского — туристы обеспечивают любой город молодёжью, рабочими местами и в конечном счёте наполняют его жизнью.»</blockquote>
+            <p class="comments__author">Иван Хафизов</p>
+          </li>
+          <li class="comments__item">
+            <img src="./images/maksimshin.jpg" alt="Сергей Максимишин облокотившийся головой на руку." class="comments__person-photo">
+            <blockquote class="comments__quote">«Ты приезжаешь, и люди рассказывают тебе, как им плохо. А когда ты покажешь, как им плохо, то ты сволочь и всё очернил.»</blockquote>
+            <p class="comments__author">Сергей Максимишин</p>
+          </li>
+        </ul>
+      </section>
+
       <section class="cover content__cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
