Внесены финальные правки

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <a target="_blank" href="https://vimeo.com/81106671" class="video__link video__link_background-kamchatka">
               <img src="./images/kamchatka.jpg" alt="Пасмурный пейзаж камчатки, вода и горы." class="video__background-img">
               <div class="video__elements">
-                <img src="./images/icon_play.svg" alt="Иконка воспроизведения (play)." class="video__play-icon">
+                <img src="./images/icon-play.svg" alt="Иконка воспроизведения (play)." class="video__play-icon">
                 <div class="video__info-block">
                   <span class="video__duration">6:30</span>
                   <h2 class="video__item-title">Colors of Kamchatka</h2>
@@ -145,7 +145,7 @@
             <a target="_blank" href="https://vimeo.com/290675450" class="video__link video__link_background-observatory">
               <img src="./images/observatory.jpg" alt="Обсерватория под сказочно-звездным небом." class="video__background-img">
               <div class="video__elements">
-                <img src="./images/icon_play.svg" alt="Иконка воспроизведения (play)." class="video__play-icon">
+                <img src="./images/icon-play.svg" alt="Иконка воспроизведения (play)." class="video__play-icon">
                 <div class="video__info-block">
                   <span class="video__duration">24:45</span>
                   <h2 class="video__item-title">Обсерватория | Observatory</h2>
